Tweaks to tests after reordering

--- a/src/bunit.web.tests/Components/TestComponentBaseTest/BlazorElementReferencesIncludedInRenderedMarkup.razor
+++ b/src/bunit.web.tests/Components/TestComponentBaseTest/BlazorElementReferencesIncludedInRenderedMarkup.razor
@@ -1,4 +1,4 @@
-@inherits TestComponentBase<BlazorElementReferencesIncludedInRenderedMarkup>
+@inherits TestComponentBase
 
 <Fixture Test="Test">
     <Fragment>
