--- a/src/bunit.web.tests/Components/TestComponentBaseTest/CorrectImplicitRazorTestContextAvailable.razor
+++ b/src/bunit.web.tests/Components/TestComponentBaseTest/CorrectImplicitRazorTestContextAvailable.razor
@@ -1,4 +1,4 @@
-﻿@inherits TestComponentBase
+@inherits TestComponentBase
 
 <Fixture Setup="Setup1" Test="Test1" Tests="new Action[] { Test1_1 }">
     <ComponentUnderTest>
