--- a/src/bunit.web.tests/_Imports.razor
+++ b/src/bunit.web.tests/_Imports.razor
@@ -1,10 +1,11 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using Microsoft.Extensions.DependencyInjection
 @using Bunit
+@using Bunit.Rendering
 @using Bunit.SampleComponents
 @using Bunit.SampleComponents.Data
 @using Shouldly
