--- a/src/bunit.web.tests/Components/TestComponentBaseTest/LifeCycleTrackerTest.razor
+++ b/src/bunit.web.tests/Components/TestComponentBaseTest/LifeCycleTrackerTest.razor
@@ -15,7 +15,7 @@
 	int renderTrigger = 0;
 	//LifeCycleTracker tracker = default!; // set during initial render by framework - should not be null!
 
-	void Test()
+	void Test(Fixture fixture)
 	{
 		var cut = GetComponentUnderTest<Wrapper>();
 		var callLog = cut.FindComponent<LifeCycleTracker>().Instance.CallLog;// tracker.CallLog;
