--- a/src/bunit.web.tests/_Imports.razor
+++ b/src/bunit.web.tests/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.JSInterop
 @using Microsoft.Extensions.DependencyInjection
 @using Bunit
+@using Bunit.RazorTesting
 @using Bunit.Rendering
 @using Bunit.SampleComponents
 @using Bunit.SampleComponents.Data
