--- a/tests/SampleComponents/AllTypesOfParams.razor
+++ b/tests/SampleComponents/AllTypesOfParams.razor
@@ -27,4 +27,11 @@
 
     [Parameter]
     public RenderFragment<TItem>? ItemTemplate { get; set; }
+
+    public int? NoParameterProperty { get; set; }
+
+    public int DummyMethod()
+    {
+        return 42;
+    }
 }
