--- a/src/bunit.web.tests/Components/TestComponentBaseTest/GettingCutAndFragmentFromRazorTestContextTest.razor
+++ b/src/bunit.web.tests/Components/TestComponentBaseTest/GettingCutAndFragmentFromRazorTestContextTest.razor
@@ -12,23 +12,23 @@
 @code{
 	void CallingGetMultipleTimesReturnsSameInstance(Fixture f)
 	{
-		var cut1 = GetComponentUnderTest<Wrapper>();
-		var cut2 = GetComponentUnderTest<Wrapper>();
+		var cut1 = f.GetComponentUnderTest<Wrapper>();
+		var cut2 = f.GetComponentUnderTest<Wrapper>();
 
 		Assert.True(ReferenceEquals(cut1, cut2), "Getting CUT multiple times should return the same instance");
 		Assert.Equal("CUT", cut1.Markup);
 
-		var firstFragmentNoId1 = GetFragment();
-		var firstFragmentId1 = GetFragment("first");
-		var firstFragmentNoId2 = GetFragment();
-		var firstFragmentId2 = GetFragment("first");
+		var firstFragmentNoId1 = f.GetFragment();
+		var firstFragmentId1 = f.GetFragment("first");
+		var firstFragmentNoId2 = f.GetFragment();
+		var firstFragmentId2 = f.GetFragment("first");
 		Assert.True(ReferenceEquals(firstFragmentNoId1, firstFragmentId1), "Getting first fragment with and without id should return the same instance");
 		Assert.True(ReferenceEquals(firstFragmentNoId1, firstFragmentNoId2), "Getting first fragment multiple times should return the same instance");
 		Assert.True(ReferenceEquals(firstFragmentId1, firstFragmentId2), "Getting first fragment multiple times should return the same instance");
 		Assert.Equal("first", firstFragmentNoId1.Markup);
 
-		var secondFragmentId1 = GetFragment<Wrapper>("second");
-		var secondFragmentId2 = GetFragment<Wrapper>("second");
+		var secondFragmentId1 = f.GetFragment<Wrapper>("second");
+		var secondFragmentId2 = f.GetFragment<Wrapper>("second");
 
 		Assert.True(ReferenceEquals(secondFragmentId1, secondFragmentId2), "Getting fragment multiple times should return the same instance");
 		Assert.Equal("second", secondFragmentId2.Markup);
@@ -46,15 +46,15 @@
 @code{
 	void CallingGenericGetAfterNonGenericGetThrows(Fixture f)
 	{
-		GetComponentUnderTest();
+		f.GetComponentUnderTest();
 
 		// It should not be possible to call the generic GetComponentUnderTest after the non-generic has been called
-		Assert.Throws<InvalidOperationException>(() => GetComponentUnderTest<Wrapper>());
+		Assert.Throws<InvalidOperationException>(() => f.GetComponentUnderTest<Wrapper>());
 
-		GetFragment();
+		f.GetFragment();
 
 		// It should not be possible to call the generic GetFragment after the non-generic has been called
-		Assert.Throws<InvalidOperationException>(() => GetFragment<Wrapper>());
+		Assert.Throws<InvalidOperationException>(() => f.GetFragment<Wrapper>());
 	}
 }
 
@@ -69,8 +69,8 @@
 @code{
 	void CallingGetCutOrGetFragmentWithWrongGenericTypeThrows(Fixture f)
 	{
-		Assert.Throws<ComponentNotFoundException>(() => GetComponentUnderTest<Simple1>());
-		Assert.Throws<ComponentNotFoundException>(() => GetFragment<Simple1>());
+		Assert.Throws<ComponentNotFoundException>(() => f.GetComponentUnderTest<Simple1>());
+		Assert.Throws<ComponentNotFoundException>(() => f.GetFragment<Simple1>());
 	}
 }
 
@@ -85,9 +85,9 @@
 @code{
 	void CallingGetCutOrGetFragmentWithIncompatibleGenericTypeThrows(Fixture f)
 	{
-		GetComponentUnderTest<Wrapper>();
-		GetFragment<Wrapper>();
-		Assert.Throws<InvalidOperationException>(() => GetComponentUnderTest<Simple1>());
-		Assert.Throws<InvalidOperationException>(() => GetFragment<Simple1>());
+		f.GetComponentUnderTest<Wrapper>();
+		f.GetFragment<Wrapper>();
+		Assert.Throws<InvalidOperationException>(() => f.GetComponentUnderTest<Simple1>());
+		Assert.Throws<InvalidOperationException>(() => f.GetFragment<Simple1>());
 	}
 }
