--- a/src/bunit.xunit.tests/MultipleTestsInFile.razor
+++ b/src/bunit.xunit.tests/MultipleTestsInFile.razor
@@ -1,4 +1,4 @@
-@inherits TestComponentBase
+@inherits TestComponentBase2
 
 <Fixture Test="x => { }" Description="My First Fixture Test">
 	<ComponentUnderTest>
