--- a/src/bunit.xunit.tests/MultipleTestsInFile.razor
+++ b/src/bunit.xunit.tests/MultipleTestsInFile.razor
@@ -17,7 +17,7 @@
 	</ComponentUnderTest>
 </Fixture>
 
-<SnapshotTest Description="Second snapshot test" Skip="wwwbb">
+<SnapshotTest Description="Second snapshot test">
 	<TestInput><Simple1></Simple1></TestInput>
 	<ExpectedOutput><h1>a</h1></ExpectedOutput>
 </SnapshotTest>
