Reorder test assets

--- a/src/bunit.web.tests/Components/_Imports.razor
+++ b/src/bunit.web.tests/Components/_Imports.razor
@@ -7,8 +7,8 @@
 @using Bunit
 @using Bunit.RazorTesting
 @using Bunit.Rendering
-@using Bunit.SampleComponents
-@using Bunit.SampleComponents.Data
+@using Bunit.TestAssets.SampleComponents
+@using Bunit.TestAssets.SampleComponents.Data
 @using Shouldly
 @using Xunit
 @using Xunit.Abstractions
