--- a/src/bunit.xunit.tests/SampleComponents/_Imports.razor
+++ b/src/bunit.xunit.tests/SampleComponents/_Imports.razor
@@ -1,2 +1,3 @@
 @using Microsoft.AspNetCore.Components.Web
-@using Bunit.SampleComponents 
+@using Bunit.SampleComponents
+@using Bunit.TestAssets.SampleComponents 
