--- a/templates/bunit-project/template/_Imports.razor
+++ b/templates/bunit-project/template/_Imports.razor
@@ -1,6 +1,8 @@
-﻿@using Microsoft.AspNetCore.Components.Web
+﻿@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.JSInterop
 @using Microsoft.Extensions.DependencyInjection
-
 @using Bunit
 @using Bunit.Mocking.JSInterop
 @using Xunit
