--- a/sample/tests/RazorTestComponents/Components/AlertRazorTest.razor
+++ b/sample/tests/RazorTestComponents/Components/AlertRazorTest.razor
@@ -3,9 +3,9 @@
 @code {
     MockJsRuntimeInvokeHandler MockJsRuntime { get; set; } = default!;
 
-    void Setup()
+    void Setup(Fixture fixture)
     {
-        MockJsRuntime = Services.AddMockJsRuntime();
+        MockJsRuntime = fixture.Services.AddMockJsRuntime();
     }
 }
 
@@ -22,18 +22,18 @@
             </button>
         </div>
     </Fragment>
-</Fixture>
-@code {
-    void Test001()
-    {
-        // Arrange and act
-        var cut = GetComponentUnderTest<Alert>();
+    @code {
+        void Test001(Fixture fixture)
+        {
+            // Arrange and act
+            var cut = fixture.GetComponentUnderTest<Alert>();
 
-        // Assert
-        IRenderedFragment expected = GetFragment("expected");
-        cut.MarkupMatches(expected);
+            // Assert
+            IRenderedFragment expected = fixture.GetFragment("expected");
+            cut.MarkupMatches(expected);
+        }
     }
-}
+</Fixture>
 
 <Fixture Setup="Setup" Test="Test002"
          Description="Given a component as Child Content,
@@ -50,22 +50,22 @@
             @testContent
         </Paragraph>
     </Fragment>
-</Fixture>
-@code {
-    string testContent = ".NET Conf: Focus on Blazor is a free ...";
-    void Test002()
-    {
-        // Arrange and act
-        var cut = GetComponentUnderTest<Alert>();
+    @code {
+        string testContent = ".NET Conf: Focus on Blazor is a free ...";
+        void Test002(Fixture fixture)
+        {
+            // Arrange and act
+            var cut = fixture.GetComponentUnderTest<Alert>();
 
-        // Assert
-        var actual = cut.Find(".alert-content > p").TextContent.Trim();
-        Assert.Equal(testContent, actual);
+            // Assert
+            var actual = cut.Find(".alert-content > p").TextContent.Trim();
+            Assert.Equal(testContent, actual);
 
-        IRenderedFragment expected = GetFragment();
-        cut.Find(".alert-content > p").MarkupMatches(expected);
+            IRenderedFragment expected = fixture.GetFragment();
+            cut.Find(".alert-content > p").MarkupMatches(expected);
+        }
     }
-}
+</Fixture>
 
 <Fixture Setup="Setup" Test="Test003"
          Description="Given Child Content as input, Alert renders it inside its alert-content element">
@@ -74,24 +74,24 @@
             @testContent
         </Alert>
     </ComponentUnderTest>
-</Fixture>
-@code {
-    void Test003()
-    {
-        // Arrange and act
-        var cut = GetComponentUnderTest<Alert>();
+    @code {
+        void Test003(Fixture fixture)
+        {
+            // Arrange and act
+            var cut = fixture.GetComponentUnderTest<Alert>();
 
-        // Assert
-        // Verify by looking at the content and handling whitespace
-        var actual = cut.Find(".alert-content").TextContent.Trim();
-        Assert.Equal(testContent, actual);
+            // Assert
+            // Verify by looking at the content and handling whitespace
+            var actual = cut.Find(".alert-content").TextContent.Trim();
+            Assert.Equal(testContent, actual);
 
-        // Verify using semantic comparison of all child nodes inside content
-        cut.Find(".alert-content")
-            .ChildNodes
-            .MarkupMatches(testContent);
+            // Verify using semantic comparison of all child nodes inside content
+            cut.Find(".alert-content")
+                .ChildNodes
+                .MarkupMatches(testContent);
+        }
     }
-}
+</Fixture>
 
 <Fixture Setup="Setup" Test="Test004"
          Description="Given a Header as input, Alert renders the header text in the expected element">
@@ -101,22 +101,22 @@
     <Fragment>
         <h4 class="alert-heading">@headerText</h4>
     </Fragment>
-</Fixture>
-@code {
-    string headerText = "It is time to focus on Blazor";
-    void Test004()
-    {
-        // Arrange and Act
-        var cut = GetComponentUnderTest<Alert>();
+    @code {
+        string headerText = "It is time to focus on Blazor";
+        void Test004(Fixture fixture)
+        {
+            // Arrange and Act
+            var cut = fixture.GetComponentUnderTest<Alert>();
 
-        // Assert
-        string expected = cut.Find(".alert-heading").TextContent;
-        Assert.Equal(headerText, expected);
+            // Assert
+            string expected = cut.Find(".alert-heading").TextContent;
+            Assert.Equal(headerText, expected);
 
-        var expectedMarkup = GetFragment();
-        cut.Find(".alert-heading").MarkupMatches(expectedMarkup);
+            var expectedMarkup = fixture.GetFragment();
+            cut.Find(".alert-heading").MarkupMatches(expectedMarkup);
+        }
     }
-}
+</Fixture>
 
 <Fixture Setup="Setup"
          Test="Given_Header_and_Localizer_Alert_Uses_Lozalizer_to_lozalize_Header_text">
@@ -130,25 +130,26 @@
     <Fragment>
         <h4 class="alert-heading">@localizer[headerKey]</h4>
     </Fragment>
-</Fixture>
-@code {
-    Localizer localizer = new Localizer() { CultureCode = "Yoda" };
-    string headerKey = "alert-heading";
 
-    void Given_Header_and_Localizer_Alert_Uses_Lozalizer_to_lozalize_Header_text()
-    {
-        // Arrange and act
-        localizer.Add(headerKey, "Time to focus on Blazor it is.");
-        var cut = GetComponentUnderTest<Alert>();
+    @code {
+        Localizer localizer = new Localizer() { CultureCode = "Yoda" };
+        string headerKey = "alert-heading";
 
-        // Assert
-        var expected = cut.Find(".alert-heading").TextContent;
-        Assert.Equal(localizer[headerKey], expected);
+        void Given_Header_and_Localizer_Alert_Uses_Lozalizer_to_lozalize_Header_text(Fixture fixture)
+        {
+            // Arrange and act
+            localizer.Add(headerKey, "Time to focus on Blazor it is.");
+            var cut = fixture.GetComponentUnderTest<Alert>();
 
-        var expectedMarkup = GetFragment();
-        cut.Find(".alert-heading").MarkupMatches(expectedMarkup);
+            // Assert
+            var expected = cut.Find(".alert-heading").TextContent;
+            Assert.Equal(localizer[headerKey], expected);
+
+            var expectedMarkup = fixture.GetFragment();
+            cut.Find(".alert-heading").MarkupMatches(expectedMarkup);
+        }
     }
-}
+</Fixture>
 
 <Fixture Setup="Setup" Test="Test006"
          Description="When dismiss button is clicked, Alert triggers expected callbacks">
@@ -159,57 +160,54 @@
         </Alert>
 
     </ComponentUnderTest>
-</Fixture>
-@code {
-    DismissingEventArgs? dismissingEvent = default;
-    Alert? dismissedAlert = default;
+    @code {
+        DismissingEventArgs? dismissingEvent = default;
+        Alert? dismissedAlert = default;
 
-    void Test006()
-    {
-        // Arrange
-        var cut = GetComponentUnderTest<Alert>();
+        void Test006(Fixture fixture)
+        {
+            // Arrange
+            var cut = fixture.GetComponentUnderTest<Alert>();
 
-        // Act
-        cut.Find("button").Click();
+            // Act
+            cut.Find("button").Click();
 
-        // Assert
-        Assert.NotNull(dismissingEvent);
-        Assert.Equal(cut.Instance, dismissedAlert);
+            // Assert
+            Assert.NotNull(dismissingEvent);
+            Assert.Equal(cut.Instance, dismissedAlert);
+        }
     }
-}
+</Fixture>
+
 
 <Fixture Setup="Setup" Test="Test007"
          Description="When dismiss button is clicked, Alert trigger css animation and finally removes all markup">
     <ComponentUnderTest>
-
-        <Alert>
-        </Alert>
-
+        <Alert />
     </ComponentUnderTest>
-</Fixture>
-@code {
-    void Test007()
-    {
-        // arrange
-        var plannedInvocation = MockJsRuntime.Setup<object>("window.transitionFinished");
-        var cut = GetComponentUnderTest<Alert>();
 
-        // Act
-        cut.Find("button").Click();
-
-        // Assert that css transition has started
-        Assert.DoesNotContain("show", cut.Find(".alert").ClassList);
-
-        // Act - complete
-        WaitForNextRender(() =>
+    @code {
+        void Test007(Fixture fixture)
         {
-            plannedInvocation.SetResult(default!);
-        });
+            // arrange
+            var plannedInvocation = MockJsRuntime.Setup<object>("window.transitionFinished");
+            var cut = fixture.GetComponentUnderTest<Alert>();
 
-        // Assert that all markup is gone
-        cut.MarkupMatches(string.Empty);
+            // Act
+            cut.Find("button").Click();
+
+            // Assert that css transition has started
+            Assert.DoesNotContain("show", cut.Find(".alert").ClassList);
+
+            // Act - complete
+            plannedInvocation.SetResult(default!);
+
+            // Assert that all markup is gone
+            cut.WaitForAssertion(() => cut.MarkupMatches(string.Empty));
+        }
     }
-}
+</Fixture>
+
 
 <Fixture Setup="Setup" Test="Test008"
          Description="Alert can be dismissed via Dismiss() mehod">
@@ -217,22 +215,22 @@
         <Alert @ref="testAlert">
         </Alert>
     </ComponentUnderTest>
-</Fixture>
-@code {
-    Alert? testAlert;
-    void Test008()
-    {
-        // arrange
-        var cut = GetComponentUnderTest<Alert>();
+    @code {
+        Alert? testAlert;
+        void Test008(Fixture fixture)
+        {
+            // arrange
+            var cut = fixture.GetComponentUnderTest<Alert>();
 
-        // Act
-        testAlert?.Dismiss().Wait();
+            // Act
+            testAlert?.Dismiss().Wait();
 
-        // Assert that all markup is gone
-        cut.MarkupMatches(string.Empty);
-        Assert.False(cut.Instance.IsVisible);
+            // Assert that all markup is gone
+            cut.MarkupMatches(string.Empty);
+            Assert.False(cut.Instance.IsVisible);
+        }
     }
-}
+</Fixture>
 
 <Fixture Setup="Setup" Test="Test009"
          Description="Alert renders correctly when all input is provided">
@@ -246,32 +244,32 @@
         </CascadingValue>
     </ComponentUnderTest>
     <Fragment>
-        <div role="alert"class="alert alert-info alert-dismissible fade show">
+        <div role="alert" class="alert alert-info alert-dismissible fade show">
             <h4 class="alert-heading">@localizer2[headerKey]</h4>
             <div class="alert-content">
                 <Paragraph IsLast="true">
                     @testContent
                 </Paragraph>
             </div>
-            <button type="button"class="close"aria-label="Close">
+            <button type="button" class="close" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
     </Fragment>
-</Fixture>
-@code {
-    Localizer localizer2 = new Localizer() { CultureCode = "Yoda" };
+    @code {
+        Localizer localizer2 = new Localizer() { CultureCode = "Yoda" };
 
-    void Test009()
-    {
-        // Arrange
-        localizer2.Add("alert-heading", "Time to focus on Blazor it is.");
+        void Test009(Fixture fixture)
+        {
+            // Arrange
+            localizer2.Add("alert-heading", "Time to focus on Blazor it is.");
 
-        // Act
-        var cut = GetComponentUnderTest<Alert>();
+            // Act
+            var cut = fixture.GetComponentUnderTest<Alert>();
 
-        // Assert
-        var expected = GetFragment();
-        cut.MarkupMatches(expected);
+            // Assert
+            var expected = fixture.GetFragment();
+            cut.MarkupMatches(expected);
+        }
     }
-}
+</Fixture>
