--- a/sample/tests/RazorTestComponents/Components/TodoListTest.razor
+++ b/sample/tests/RazorTestComponents/Components/TodoListTest.razor
@@ -1,8 +1,7 @@
 ﻿@inherits TestComponentBase
 
-<Fixture Setup="() => Services.AddMockJsRuntime()"
-         Test="EmptyTodoList"
-         Tests="new Action[]{ SettingLabel, TaskListRendersItemsUsingItemTemplate }">
+<Fixture Setup="(fixture) => fixture.Services.AddMockJsRuntime()"
+         Test="EmptyTodoListRendersCorrectly">
     <ComponentUnderTest>
         <TodoList>
             <ItemsTemplate>
@@ -22,59 +21,99 @@
         </form>
         <ol class="list-group"></ol>
     </Fragment>
+
+    @code {
+        void EmptyTodoListRendersCorrectly(Fixture fixture)
+        {
+            // Act - get the CUT
+            var cut = fixture.GetComponentUnderTest<TodoList>();
+
+            // Assert - get the expected initial rendered HTML from the fragment
+            // and use it to verify the initial rendered HTML
+            var expectedInitialRender = fixture.GetFragment("EmptyTodoListRender");
+            cut.MarkupMatches(expectedInitialRender);
+        }
+    }
+</Fixture>
+
+<Fixture Setup="(fixture) => fixture.Services.AddMockJsRuntime()"
+         Test="SettingLabelRendersCorrectly">
+    <ComponentUnderTest>
+        <TodoList>
+            <ItemsTemplate>
+                <TodoItem Todo=@context />
+            </ItemsTemplate>
+        </TodoList>
+    </ComponentUnderTest>
+
+    @code
+    {
+        void SettingLabelRendersCorrectly(Fixture fixture)
+        {
+            // Arrange - get the CUT
+            var cut = fixture.GetComponentUnderTest<TodoList>();
+
+            // Act - update label
+            cut.SetParametersAndRender(builder => builder.Add(p => p.Label, "LABEL"));
+
+            // Assert - verifiy that the placeholder and aria-label has changed
+            cut.GetChangesSinceFirstRender().ShouldAllBe(
+                diff => diff.ShouldBeAttributeChange("placeholder", "LABEL"),
+                diff => diff.ShouldBeAttributeChange("aria-label", "LABEL")
+            );
+        }
+    }
+</Fixture>
+
+<Fixture Setup="(fixture) => fixture.Services.AddMockJsRuntime()"
+         Test="TaskListRendersItemsUsingItemTemplate">
+    <ComponentUnderTest>
+        <TodoList>
+            <ItemsTemplate>
+                <TodoItem Todo=@context />
+            </ItemsTemplate>
+        </TodoList>
+    </ComponentUnderTest>
+
     <Fragment Id="TodoItemRender">
         <TodoItem Todo="@TestItems[0]" />
     </Fragment>
+
+    @code
+    {
+        Todo[] TestItems { get; } = new[] { new Todo { Id = 42 } };
+
+        void TaskListRendersItemsUsingItemTemplate(Fixture fixture)
+        {
+            // Arrange - get the cut and take a snapshot of the current render tree output
+            var cut = fixture.GetComponentUnderTest<TodoList>();
+            cut.SaveSnapshot();
+
+            // Act - assign test todo items to the CUT
+            cut.SetParametersAndRender(b => b.Add(p => p.Items, TestItems));
+
+            // Assert - get the diffs since the snapshot and compare to the expected.
+            var diffs = cut.GetChangesSinceSnapshot();
+            var expected = fixture.GetFragment("TodoItemRender");
+            diffs.ShouldHaveSingleChange().ShouldBeAddition(expected);
+        }
+    }
 </Fixture>
+
 @code {
-    Todo[] TestItems { get; } = new[] { new Todo { Id = 42 } };
+    MockJsRuntimeInvokeHandler jsRtMock = default!;
+    Todo? createdTodo;
 
-    void EmptyTodoList()
+    void OnAddingTodoHandler(Todo todo) => createdTodo = todo;
+
+    void Setup(Fixture fixture)
     {
-        // Act - get the CUT
-        var cut = GetComponentUnderTest<TodoList>();
-
-        // Assert - get the expected initial rendered HTML from the fragment 
-        // and use it to verify the initial rendered HTML
-        var expectedInitialRender = GetFragment("EmptyTodoListRender");
-        cut.MarkupMatches(expectedInitialRender);
-    }
-
-    void SettingLabel()
-    {
-        // Arrange - get the CUT
-        var cut = GetComponentUnderTest<TodoList>();
-
-        // Act - update label 
-        cut.SetParametersAndRender((nameof(TodoList.Label), "LABEL"));
-
-        // Assert - verifiy that the placeholder and aria-label has changed
-        cut.GetChangesSinceFirstRender().ShouldAllBe(
-            diff => diff.ShouldBeAttributeChange("placeholder", "LABEL"),
-            diff => diff.ShouldBeAttributeChange("aria-label", "LABEL")
-        );
-    }
-
-    void TaskListRendersItemsUsingItemTemplate()
-    {
-        // Arrange - get the cut and take a snapshot of the current render tree output
-        var cut = GetComponentUnderTest<TodoList>();
-        cut.SaveSnapshot();
-
-        // Act - assign test todo items to the CUT
-        cut.SetParametersAndRender((nameof(TodoList.Items), TestItems));
-
-        // Assert - get the diffs since the snapshot and compare to the expected.
-        var diffs = cut.GetChangesSinceSnapshot();
-        var expected = GetFragment("TodoItemRender");
-        diffs.ShouldHaveSingleChange().ShouldBeAddition(expected);
+        jsRtMock = fixture.Services.AddMockJsRuntime();
     }
 }
 
 <Fixture Setup="Setup"
-         Tests="new Action[]{ OnFirstRenderInputFieldGetsFocus,
-                AfterFirstRenderInputFieldDoesntGetFocusAfterRerenders,
-                WhenAddTaskFormIsSubmittedWithNoTextOnAddingTodoIsNotCalled }">
+         Test="OnFirstRenderInputFieldGetsFocus">
     <ComponentUnderTest>
         <TodoList OnAddingTodo="OnAddingTodoHandler">
             <ItemsTemplate>
@@ -82,70 +121,100 @@
             </ItemsTemplate>
         </TodoList>
     </ComponentUnderTest>
+
+    @code
+    {
+        void OnFirstRenderInputFieldGetsFocus(Fixture fixture)
+        {
+            // Act
+            var cut = fixture.GetComponentUnderTest<TodoList>();
+
+            // Assert that there is a call to document.body.focus.call with a single argument,
+            // a reference to the input element.
+            jsRtMock.VerifyInvoke("document.body.focus.call")
+                .Arguments.Single().ShouldBeElementReferenceTo(cut.Find("input"));
+        }
+    }
 </Fixture>
-@code {
-    MockJsRuntimeInvokeHandler jsRtMock = default!;
-    Todo? createdTodo;
 
-    void OnAddingTodoHandler(Todo todo) => createdTodo = todo;
-
-    void Setup()
+<Fixture Setup="Setup"
+         Test="AfterFirstRenderInputFieldDoesntGetFocusAfterRerenders">
+    <ComponentUnderTest>
+        <TodoList OnAddingTodo="OnAddingTodoHandler">
+            <ItemsTemplate>
+                <TodoItem Todo=@context />
+            </ItemsTemplate>
+        </TodoList>
+    </ComponentUnderTest>
+    @code
     {
-        jsRtMock = Services.AddMockJsRuntime();
-    }
+        void AfterFirstRenderInputFieldDoesntGetFocusAfterRerenders(Fixture fixture)
+        {
+            // Arrange
+            var cut = fixture.GetComponentUnderTest<TodoList>();
 
-    void OnFirstRenderInputFieldGetsFocus()
+            // Act
+            cut.Render(); // second render
+            cut.Render(); // thrid render
+            cut.Render(); // ...
+            cut.Render();
+
+            // Assert that focus logic only runs on first render (only called 1 time).
+            jsRtMock.VerifyInvoke("document.body.focus.call", calledTimes: 1);
+        }
+    }
+</Fixture>
+
+<Fixture Setup="Setup"
+         Test="WhenAddTaskFormIsSubmittedWithNoTextOnAddingTodoIsNotCalled">
+    <ComponentUnderTest>
+        <TodoList OnAddingTodo="OnAddingTodoHandler">
+            <ItemsTemplate>
+                <TodoItem Todo=@context />
+            </ItemsTemplate>
+        </TodoList>
+    </ComponentUnderTest>
+    @code
     {
-        // Act
-        var cut = GetComponentUnderTest<TodoList>();
+        void WhenAddTaskFormIsSubmittedWithNoTextOnAddingTodoIsNotCalled(Fixture fixture)
+        {
+            // Arrange
+            var cut = fixture.GetComponentUnderTest<TodoList>();
 
-        // Assert that there is a call to document.body.focus.call with a single argument,
-        // a reference to the input element.
-        jsRtMock.VerifyInvoke("document.body.focus.call")
-            .Arguments.Single().ShouldBeElementReferenceTo(cut.Find("input"));
+            // Act - submit the empty form
+            cut.Find("form").Submit();
+
+            // Assert - verify that no task was created
+            Assert.Null(createdTodo);
+        }
     }
+</Fixture>
 
-    void AfterFirstRenderInputFieldDoesntGetFocusAfterRerenders()
+<Fixture Setup="Setup"
+         Test="WhenAddTaskFormIsSubmittedWithTextOnAddingTodoIsCalled">
+    <ComponentUnderTest>
+        <TodoList OnAddingTodo="OnAddingTodoHandler">
+            <ItemsTemplate>
+                <TodoItem Todo=@context />
+            </ItemsTemplate>
+        </TodoList>
+    </ComponentUnderTest>
+    @code
     {
-        // Arrange
-        var cut = GetComponentUnderTest<TodoList>();
+        void WhenAddTaskFormIsSubmittedWithTextOnAddingTodoIsCalled(Fixture fixture)
+        {
+            // Arrange - ensure createdTask is null
+            var cut = fixture.GetComponentUnderTest<TodoList>();
+            var taskValue = "HELLO WORLD TASK";
 
-        // Act
-        cut.Render(); // second render
-        cut.Render(); // thrid render
-        cut.Render(); // ...
-        cut.Render();
+            // Act - find input field and change its value, then submit the form
+            cut.Find("input").Change(taskValue);
+            cut.Find("form").Submit();
 
-        // Assert that focus logic only runs on first render (only called 1 time).
-        jsRtMock.VerifyInvoke("document.body.focus.call", calledTimes: 1);
+            // Assert that a new task has been passed to the EventCallback listener and that the
+            // new task has the expected value
+            Assert.NotNull(createdTodo);
+            Assert.Equal(taskValue, createdTodo?.Text);
+        }
     }
-
-    void WhenAddTaskFormIsSubmittedWithNoTextOnAddingTodoIsNotCalled()
-    {
-        // Arrange
-        var cut = GetComponentUnderTest<TodoList>();
-
-        // Act - submit the empty form
-        cut.Find("form").Submit();
-
-        // Assert - verify that no task was created
-        Assert.Null(createdTodo);
-    }
-
-    void WhenAddTaskFormIsSubmittedWithTextOnAddingTodoIsCalled()
-    {
-        // Arrange - ensure createdTask is null
-        createdTodo = null;
-        var cut = GetComponentUnderTest<TodoList>();
-        var taskValue = "HELLO WORLD TASK";
-
-        // Act - find input field and change its value, then submit the form
-        cut.Find("input").Change(taskValue);
-        cut.Find("form").Submit();
-
-        // Assert that a new task has been passed to the EventCallback listener and that the 
-        // new task has the expected value
-        Assert.NotNull(createdTodo);
-        Assert.Equal(taskValue, createdTodo?.Text);
-    }
-}
+</Fixture>
