Moved xunit logger to own namespace

--- a/src/bunit.web.tests/_Imports.razor
+++ b/src/bunit.web.tests/_Imports.razor
@@ -10,5 +10,4 @@
 @using Bunit.TestAssets.SampleComponents
 @using Bunit.TestAssets.SampleComponents.Data
 @using Shouldly
-@using Xunit
-@using Xunit.Abstractions
+@using global::Xunit
