Removed Bunit from the sample projects namespace

--- a/sample/src/_Imports.razor
+++ b/sample/src/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@namespace Bunit.SampleApp
+﻿@namespace SampleApp
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
@@ -6,8 +6,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using Bunit
-@using Bunit.SampleApp
-@using Bunit.SampleApp.Data
-@using Bunit.SampleApp.Components
-@using Bunit.SampleApp.Shared
+@using SampleApp
+@using SampleApp.Data
+@using SampleApp.Components
+@using SampleApp.Shared
