--- a/sample/tests/_Imports.razor
+++ b/sample/tests/_Imports.razor
@@ -3,10 +3,10 @@
 
 @using Bunit
 @using Bunit.Mocking.JSInterop
-@using Bunit.SampleApp
-@using Bunit.SampleApp.Data
-@using Bunit.SampleApp.Components
-@using Bunit.SampleApp.Pages
+@using SampleApp
+@using SampleApp.Data
+@using SampleApp.Components
+@using SampleApp.Pages
 
 @using Xunit
 @using Shouldly
