--- a/sample/src/Pages/_Host.cshtml
+++ b/sample/src/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace Bunit.SampleApp.Pages
+@namespace SampleApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
