Updated create a test project page

--- a/docs/templates/bunit/styles/main.css
+++ b/docs/templates/bunit/styles/main.css
@@ -25,3 +25,16 @@
 .sideaffix {
   margin-top: 0;
 }
+
+.tabGroup {
+  margin-bottom: 1rem;
+}
+
+.tabGroup section pre:only-child {
+  border: none;
+  margin-top: -16px !important;
+}
+
+pre code {
+  white-space: pre;
+}
