docs: fixture options and tweaks to toc

--- a/docs/samples/tests/razor/_Imports.razor
+++ b/docs/samples/tests/razor/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.Extensions.DependencyInjection
 @using Bunit
 @using Bunit.Mocking.JSInterop
-@using Xunit
+@using global::Xunit
+@using AngleSharp.Dom
