docs: first part of params

--- a/docs/templates/bunit/styles/main.css
+++ b/docs/templates/bunit/styles/main.css
@@ -99,7 +99,8 @@ code[name] {
     }
 }
 
-.alert-info code {
+.alert-info code,
+.alert-info a.xref {
     background-color: inherit;
     color: #131ed2;
 }
