--- a/docs/samples/tests/xunit/_Imports.razor
+++ b/docs/samples/tests/xunit/_Imports.razor
@@ -1,11 +1,8 @@
-@namespace Bunit.Docs.Samples
-
-@using Microsoft.AspNetCore.Components.Forms
+﻿@using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using Microsoft.Extensions.DependencyInjection
 @using Bunit
 @using Bunit.Mocking.JSInterop
-@using global::Xunit
-@using AngleSharp.Dom
+@using Xunit
