Docs: Updates to external ressources and passing params

--- a/docs/samples/components/AllKindsOfParams.razor
+++ b/docs/samples/components/AllKindsOfParams.razor
@@ -11,4 +11,7 @@
 
   [Parameter]
   public EventCallback OnSomething { get; set; }
+
+  [Parameter]
+  public RenderFragment ChildContent { get; set; }
 }
