--- a/docs/samples/tests/razor/AllKindsOfParamsTest.razor
+++ b/docs/samples/tests/razor/AllKindsOfParamsTest.razor
@@ -14,3 +14,40 @@
     </AllKindsOfParams>
   </ComponentUnderTest>
 </Fixture>
+
+<Fixture Test="f => {}">
+  <ComponentUnderTest>
+    <AllKindsOfParams>
+      <h1>Hello World</h1>
+    </AllKindsOfParams>
+  </ComponentUnderTest>
+</Fixture>
+
+<Fixture Test="f => {}">
+  <ComponentUnderTest>
+    <AllKindsOfParams>
+      <Counter />
+    </AllKindsOfParams>
+  </ComponentUnderTest>
+</Fixture>
+
+<Fixture Test="f => {}">
+  <ComponentUnderTest>
+    <AllKindsOfParams>
+      <Alert Heading="Alert heading" Type="AlertType.Warning">
+        <p>Hello World</p>
+      </Alert>
+    </AllKindsOfParams>
+  </ComponentUnderTest>
+</Fixture>
+
+<Fixture Test="f => {}">
+  <ComponentUnderTest>
+    <AllKindsOfParams>
+      <h1>Below you will find a most interesting alert!</h1>
+      <Alert Heading="Alert heading" Type="AlertType.Warning">
+        <p>Hello World</p>
+      </Alert>
+    </AllKindsOfParams>
+  </ComponentUnderTest>
+</Fixture>
