--- a/docs/samples/tests/razor/PassingParametersToComponents.razor
+++ b/docs/samples/tests/razor/PassingParametersToComponents.razor
@@ -14,5 +14,7 @@
       Before you really get the benefit of TDD, you need to practice...
     </Alert>
   </TestInput>
-  <ExpectedOutput>@* ... *@</ExpectedOutput> 
+  <ExpectedOutput>
+    <div diff:ignore>...</div>  
+  </ExpectedOutput> 
 </SnapshotTest>
