--- a/docs/samples/components/Alert.razor
+++ b/docs/samples/components/Alert.razor
@@ -3,3 +3,15 @@
   [Parameter] public AlertType Type { get; set; }
   [Parameter] public RenderFragment ChildContent { get; set; }
 }
+<div role="alert" class="alert alert-@(Type.ToString().ToLower()) alert-dismissible fade show">
+  @if (!string.IsNullOrWhiteSpace(Heading))
+  {
+    <h4 class="alert-heading">@Heading</h4>
+  }
+  <div class="alert-content">
+    @ChildContent
+  </div>
+  <button type="button" class="close" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
