Docs: Template, child content, and unmatched value parameters passing

--- a/docs/samples/tests/razor/AllKindsOfParamsTest.razor
+++ b/docs/samples/tests/razor/AllKindsOfParamsTest.razor
@@ -94,3 +94,31 @@
     </RenderFragmentParams>
   </ComponentUnderTest>
 </Fixture>
+
+<Fixture Test="f => {}">
+  <ComponentUnderTest>
+    <TemplateParams Items=@(new string[]{ "Foo", "Bar", "Baz" }) TItem="string">
+      <Template>
+        <span>@context</span>
+      </Template>
+    </TemplateParams>
+  </ComponentUnderTest>
+</Fixture>
+
+<Fixture Test="f => {}">
+  <ComponentUnderTest>
+    <TemplateParams Items=@(new string[]{ "Foo", "Bar", "Baz" }) TItem="string">
+      <Template>
+        <div class="item">
+          <Item Value=@context></Item>
+        </div>
+      </Template>
+    </TemplateParams>
+  </ComponentUnderTest>
+</Fixture>
+
+<Fixture Test="f => {}">
+  <ComponentUnderTest>
+    <UnmatchedParams some-unknown-param="a value" />
+  </ComponentUnderTest>
+</Fixture>
